--- a/myblog/blogapp/templates/blogapp/detail.html
+++ b/myblog/blogapp/templates/blogapp/detail.html
@@ -9,7 +9,7 @@
     <br><br>
     
     <h3> 제목: {{ blog.title }} </h3>
-    <p> 날짜: {{ blog.pub_date }} </p>
+    <p> 날짜: {{ blog.date }} </p>
     <p> 자세한 본문: {{ blog.body }}</p>
     <hr>
 
