--- a/myblog/blogapp/templates/blogapp/home.html
+++ b/myblog/blogapp/templates/blogapp/home.html
@@ -10,7 +10,7 @@
     
     {% for blog in blogs.all %}
         <h3> 제목: {{ blog.title }} </h3>
-        <p> 날짜: {{ blog.pub_date }} </p>
+        <p> 날짜: {{ blog.date }} </p>
         <p> 본문 미리보기: {{ blog.summary }} <a href="{% url 'detail' blog.id %}">...more</a></p>
         <hr>
     {% endfor %}
